Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8222664

runtime/appcds/sharedStrings/SharedStringsStress.java assert GC active during NoGCVerifier

XMLWordPrintable

    • gc
    • b19
    • Verified

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/.../workspace/open/src/hotspot/share/runtime/safepointVerifiers.cpp:48), pid=44086, tid=18947
      # assert(!h->is_gc_active()) failed: GC active during NoGCVerifier

        1. all_threads.txt
          31 kB
        2. hs_err_pid44086.log
          48 kB
        3. thread7.txt
          5 kB
        4. thread9.txt
          4 kB

            pliden Per Liden (Inactive)
            dlong Dean Long
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: