8222664: runtime/appcds/sharedStrings/SharedStringsStress.java assert GC active during NoGCVerifier

Reviewed-by: iklam, stefank